codegen/tests/errors/external_trait_without_attr.rs
use delegation_codegen::delegate;

#[delegate(derive(for<> AsRef<str>))]
pub enum Name {
    First(String),
}

fn main() {
    unreachable!()
}
